--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,12 +104,20 @@
         app:layout_constraintTop_toTopOf="@id/max_select_num"
         app:layout_constraintBottom_toBottomOf="@id/max_select_num"/>
 
+    <Button
+        android:id="@+id/create"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="制作"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/max_select_num"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:overScrollMode="never"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/max_select_num"/>
+        app:layout_constraintTop_toBottomOf="@id/create"/>
 
 </android.support.constraint.ConstraintLayout>
