--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -27,7 +27,7 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
-        android:id="@+id/duration"
+        android:id="@+id/panel"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:background="@drawable/shadow"
@@ -38,8 +38,8 @@
         android:paddingTop="8dp"
         android:text="00:00"
         android:textSize="11sp"
-        android:textColor="@color/textcolor"
         android:visibility="gone"
+        android:textColor="@color/textcolor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
